--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -2,9 +2,12 @@ name: Auto Update Daily Report
 
 # Déclenchement du workflow
 on:
-  # Exécution quotidienne à 9h00 UTC (ajustez selon votre fuseau horaire)
+  # Exécution 4 fois par jour : 6h, 12h, 18h, 0h UTC
   schedule:
-    - cron: "0 9 * * *"
+    - cron: "0 6 * * *" # 6h00 UTC
+    - cron: "0 7   * * *" # 7h00 UTC
+    - cron: "0 8 * * *" # 8h00 UTC
+    - cron: "0 9 * * *" # 9h00 UTC (minuit)
 
   # Permet aussi de déclencher manuellement
   workflow_dispatch:
@@ -42,5 +45,13 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add .
-          git diff --staged --quiet || git commit -m "🤖 Auto-update: $(date '+%Y-%m-%d %H:%M:%S')"
+          # Déterminer le numéro d'exécution basé sur l'heure
+          HOUR=$(date -u '+%H')
+          if [ "$HOUR" = "06" ]; then EXEC_NUM="1/4"
+          elif [ "$HOUR" = "12" ]; then EXEC_NUM="2/4"
+          elif [ "$HOUR" = "18" ]; then EXEC_NUM="3/4"
+          elif [ "$HOUR" = "00" ]; then EXEC_NUM="4/4"
+          else EXEC_NUM="N/A"
+          fi
+          git diff --staged --quiet || git commit -m "🤖 Auto-update #$EXEC_NUM: $(date '+%Y-%m-%d %H:%M:%S') UTC"
           git push
